Réglages d'un bug sur la documentation
